--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <li><a class="folders" href="week3/index.html">Week 3</a></li>
             <li><a class="folders" href="week4/work.html">Week 4</a></li>
             </ul>
+            <li><a class="folders" href="week5/about.html">Week 5</a></li>
         </nav>
         
         </header>
