--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li><a class="folders" href="week4/work.html">Week 4</a></li>
             </ul>
             <li><a class="folders" href="week5/about.html">Week 4</a></li>
+            <li><a class="folders" href="week5/work.html">Week 4</a></li>
     
     
         </nav>
