--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <li><a class="folders" href="week4/work.html">Week 4</a></li>
                 <li><a class="folders" href="week5/work.html">Week 5</a></li>
                 <li><a class="folders" href="week6/work.html">Week 6</a></li>
+                <li><a class="folders" href="week8/work.html">Week 8</a></li>
             </ul>
 
 
