--- a/week8/about.html
+++ b/week8/about.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <h1 style="font-size:4vw;">Eugenia Lacayo</h1>
+        <h1>Eugenia Lacayo</h1>
         <nav>
             <ul>
                 <li style="font-size:3.5vw;" class="current-page"><a class="nav-links" href="about.html">About</a></li>
@@ -21,23 +21,23 @@
         </nav>
     </header>
 
-    <h2 style="font-size:9vw;">about.</h2>
+    <h2>about.</h2>
 
     <div class="left">
-        <h6 style="font-size:6vw;">HI THERE!</h6>
+        <h6>HI THERE!</h6>
     </div>
 
     <div class="right">
-            <p style="font-size:3vw;">I am a Parsons student.</p>
-            <p style="font-size:3vw;">I am majoring in Strategic Design and Management.</p>
-            <p style="font-size:3vw;">I live in New York City.</p>
-            <p style="font-size:3vw;">I am from Nicaragua.</p>
-            <p style="font-size:3vw;">I go crazy over nature.</p>
-            <p style="font-size:3vw;">I love watching Movies and everything related to them.</p>
-            <p style="font-size:3vw;">I am very passionate about food.</p>
-            <p style="font-size:3vw;">I have a love/hate relationship with typoography.</p>
-            <p style="font-size:3vw;">I am very organized.</p>
-            <p style="font-size:3vw;">I am the type of person you would like to work with.</p>
+            <p>I am a Parsons student.</p>
+            <p>I am majoring in Strategic Design and Management.</p>
+            <p>I live in New York City.</p>
+            <p>I am from Nicaragua.</p>
+            <p>I go crazy over nature.</p>
+            <p>I love watching Movies and everything related to them.</p>
+            <p>I am very passionate about food.</p>
+            <p>I have a love/hate relationship with typoography.</p>
+            <p>I am very organized.</p>
+            <p>I am the type of person you would like to work with.</p>
     
     </div>
 
