--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <li><a class="folders" href="week5/work.html">Week 5</a></li>
                 <li><a class="folders" href="week6/work.html">Week 6</a></li>
                 <li><a class="folders" href="week8/work.html">Week 8</a></li>
+                <li><a class="folders" href="week9/index.html">Week 9</a></li>
             </ul>
 
 
