--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <li><a class="folders" href="week8/work.html">Week 8</a></li>
                 <li><a class="folders" href="week9/index.html">Week 9</a></li>
                 <li><a class="folders" href="week10/index.html">Week 10</a></li>
+                 <li><a class="folders" href="week11/index.html">Week 11</a></li>
             </ul>
 
 
