--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <li><a class="folders" href="week10/index.html">Week 10</a></li>
                 <li><a class="folders" href="week11/index.html">Week 11</a></li>
                 <li><a class="folders" href="week12/index.html">Week 12</a></li>
+                <li><a class="folders" href="week13/index.html">Week 13</a></li>
             </ul>
 
 
