--- a/week13/audio.html
+++ b/week13/audio.html
@@ -14,6 +14,7 @@
     </ul>
 
     <main class="audio">
+        <div class="title">Sequential Recut Project Audio</div>
         <div>
             <audio controls>
             <source src="audio/Sequential%20Recut%20Project.mp3.mp3" type="audio/wav">
@@ -22,6 +23,9 @@
         
         <div class="audio-link">
             <a href="audio/Sequential%20Recut%20Project.mp3.mp3"  class="download">Download Audio</a>
+        </div>
+        <div class="description">
+            <p>This is the audio of the Sequential Recut Project I made for a class freshman year at Parsons about Ruby Bridges and racial segregation.</p>
         </div>
     </main>
 
