--- a/week13/video.html
+++ b/week13/video.html
@@ -14,6 +14,7 @@
     </ul>
 
     <main class="content">
+        <div class="title">Sequential Recut Project</div>
         <div class="video">
             <video controls width="600">
         <source src="video/Sequential%20Recut%20Project.mp4" type="video/mp4">
@@ -23,7 +24,10 @@
         </div>
 
         <div class="video-link">
-            <a href="video/Sequential%20Recut%20Project.mp4"  class="download">Download Video</a>
+            <a href="video/Sequential%20Recut%20Project.mp4" class="download">Download Video</a>
+        </div>
+        <div class="description">
+            <p>This is a Video I made for a class freshman year at Parsons about Ruby Bridges and racial segregation.</p>
         </div>
     </main>
 
